# glimpse-win

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SKILL.md  package.json  test.mjs
.github/workflows/: ci.yml  release.yml
docs/: LINUX_PORT_PLAN.md  LINUX_PORT_SUMMARY.md
docs/adr/: 001-linux-port.md  20260316-windows-runtime-and-delivery.md
docs/architecture/: 20260316-windows-port-plan.md
docs/issues/: linux-port.md
docs/issues/platform/: 20260316-windows-port-and-automated-development.md
docs/plans/: 2026-03-23-rust-windows-port.md
pi-extension/: companion.mjs  index.ts
scripts/: build.mjs  demo-companion.mjs  demo-html-interaction.mjs  demo-windows.mjs  postinstall.mjs  publish.sh
scripts/demo/: demo-companion-feed.mjs  probe-extension-spawn.mjs  probe-named-pipe.mjs  probe-pi-extension.ts  send-companion-status.mjs
src/: glimpse.mjs  glimpse.swift
src/windows/: Cargo.toml
src/windows/src/: bridge.rs  cursor.rs  io.rs  main.rs  protocol.rs  sysinfo.rs
test/: comprehensive-test.mjs  platform.mjs  test.mjs
